fixed footer on mobile
Footer doesn’t overlap content on mobile anymore, report an issue has
an actual link, all links open in new tab

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -161,3 +161,9 @@ footer {
     color: $background-color;
   }
 }
+
+@media (max-width: 800px) and (orientation: portrait) {
+  body {
+    padding-bottom: (60px * 3) + ($spacing-unit * 3);
+  }
+}
